--- a/package.json
+++ b/package.json
@@ -10,12 +10,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^5.14.5",
+    "date-fns": "^2.28.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "2.24.0",
+    "moment-timezone": "^0.5.28",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "react-native-weekly-calendar": "^0.2.0"
+  },
+  "resolutions": {
+    "moment": "2.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
